@@ -337,69 +337,69 @@ jobs:
 #         GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
 
 
-# # --------------------------
-# # --- Windows MSVC steps ---
-# # --------------------------
-# #
-#   windows-msvc_x64:
-#     runs-on: windows-2022
-#     steps:
+# --------------------------
+# --- Windows MSVC steps ---
+# --------------------------
+#
+  windows-msvc_x64:
+    runs-on: windows-2022
+    steps:
 
-#     # --- Clone the latest commit ---
-#     - name: Checkout
-#       uses: actions/checkout@v3
-#       with:
-#         fetch-tags: true
-#         submodules: recursive
-#         fetch-depth: 0
+    # --- Clone the latest commit ---
+    - name: Checkout
+      uses: actions/checkout@v3
+      with:
+        fetch-tags: true
+        submodules: recursive
+        fetch-depth: 0
 
-#     # --- Config git and get the version from "git describe" ---
-#     - name: Config Git
-#       id: config_git
-#       shell: bash
-#       run: |
-#         git config user.email "Ho-Ro@users.noreply.github.com"
-#         git config user.name "Ho-Ro"
-#         git fetch --tags --force || true
-#         git submodule update --init --recursive
-#         echo "git_describe=$(git describe)"
-#         echo "git_describe=$(git describe)" >> $GITHUB_OUTPUT
+    # --- Config git and get the version from "git describe" ---
+    - name: Config Git
+      id: config_git
+      shell: bash
+      run: |
+        git config user.email "Ho-Ro@users.noreply.github.com"
+        git config user.name "Ho-Ro"
+        git fetch --tags --force || true
+        git submodule update --init --recursive
+        echo "git_describe=$(git describe)"
+        echo "git_describe=$(git describe)" >> $GITHUB_OUTPUT
 
-#     - name: Install Qt for Windows
-#       uses: jurplel/install-qt-action@v3
+    - name: Install Qt for Windows
+      uses: jurplel/install-qt-action@v4
 
-#     - name: Setup Windows MSVC Build
-#       run:
-#         md build &
-#         call "%VCINSTALLDIR%/Auxiliary/Build/vcvars64.bat" &
-#         cmake -G "Visual Studio 17 2022" -A x64 -DCMAKE_PREFIX_PATH=%Qt6_DIR% -DCMAKE_BUILD_TYPE=Release -Bbuild
+    - name: Setup Windows MSVC Build
+      run:
+        md build &
+        call "%VCINSTALLDIR%/Auxiliary/Build/vcvars64.bat" &
+        cmake -G "Visual Studio 17 2022" -A x64 -DCMAKE_PREFIX_PATH=%Qt6_DIR% -DCMAKE_BUILD_TYPE=Release -Bbuild
 
-#     - name: Windows MSVC Build
-#       # GitHub hosts Windows runners on Standard_DS2_v2 virtual machines in Microsoft Azure:
-#       # 2-core CPU, 7 GB of RAM memory, 14 GB of SSD disk space
-#       working-directory: ${{github.workspace}}/build
-#       shell: bash
-#       run: |
-#         cmake --build . --parallel 8 --config Release --target package
-#         ZIP=$(basename packages/openhantek_*_msvc_x64.zip)
-#         rm -f packages/openhantek_*_msvc_x64.*
-#         cd openhantek/Release
-#         7z a ../../packages/$ZIP *
-#         cd ../..
-#         ls -l packages
+    - name: Windows MSVC Build
+      # GitHub hosts Windows runners on Standard_DS2_v2 virtual machines in Microsoft Azure:
+      # 2-core CPU, 7 GB of RAM memory, 14 GB of SSD disk space
+      working-directory: ${{github.workspace}}/build
+      shell: bash
+      run: |
+        cmake --build . --parallel 8 --config Release --target package
+        ZIP=$(basename packages/openhantek_*_msvc_x64.zip)
+        rm -f packages/openhantek_*_msvc_x64.*
+        cd openhantek/Release
+        7z a ../../packages/$ZIP *
+        cd ../..
+        ls -l packages
 
-#     - name: Upload Windows MSVC Artifacts
-#       uses: actions/upload-artifact@v4
-#       with:
-#         name: openhantek_${{ steps.config_git.outputs.git_describe }}_msvc_x64
-#         path: ./build/packages/*.zip
+    - name: Upload Windows MSVC Artifacts
+      uses: actions/upload-artifact@v4
+      with:
+        name: openhantek_${{ steps.config_git.outputs.git_describe }}_msvc_x64
+        path: ./build/packages/*.zip
 
-#     - name: Upload Windows MSVC Release Assets
-#       if: startsWith(github.ref, 'refs/tags/')
-#       uses: softprops/action-gh-release@v1
-#       with:
-#         prerelease: true
-#         files: ./build/packages/*
-#       env:
-#         GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+    - name: Upload Windows MSVC Release Assets
+      if: startsWith(github.ref, 'refs/tags/')
+      uses: softprops/action-gh-release@v1
+      with:
+        prerelease: true
+        files: ./build/packages/*
+      env:
+        GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
 
