@@ -71,7 +71,7 @@ target_compile_features(${PROJECT_NAME} PRIVATE cxx_range_for)
 if(MSVC)
     include(../cmake/fftw_on_windows.cmake)
     include(../cmake/libusb_on_windows.cmake)
-    include(../cmake/copy_qt5_dlls_to_bin_dir.cmake)
+    include(../cmake/copy_qt6_dlls_to_bin_dir.cmake)
     target_compile_options(${PROJECT_NAME} PRIVATE "/W4" "/wd4251" "/wd4127" "/wd4275" "/wd4200" "/nologo" "/J" "/Zi")
     target_compile_options(${PROJECT_NAME} PRIVATE "$<$<CONFIG:DEBUG>:/MDd>")
 else()
